src/test/ui/span/borrowck-call-method-from-mut-aliasable.nll.stderr
error[E0596]: cannot borrow immutable item `*x` as mutable
  --> $DIR/borrowck-call-method-from-mut-aliasable.rs:27:5
   |
LL | fn b(x: &Foo) {
   |         ---- help: consider changing this to be a mutable reference: `&mut Foo`
LL |     x.f();
LL |     x.h(); //~ ERROR cannot borrow
   |     ^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
